--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "express-sequelize-crud",
+  "name": "mysql-express-sequelize-crud",
   "version": "3.5.1",
   "description": "React Admin backend with Express and Sequelize. 1 line per resource!",
   "main": "./lib/index.js",
